@@ -551,6 +551,12 @@ bool CUnitScript::EmitAbsSFX(int sfxType, const float3& absPos, const float3& ab
 		} break;
 
 		default: {
+			if ((sfxType & SFX_ABSOLUTE) != 0) {
+				// emit defined explosion-generator (can only be custom, not standard)
+				// index is made valid by callee, an ID of -1 means CEG failed to load
+				explGenHandler.GenExplosion(sfxType - SFX_ABSOLUTE, absPos, absDir, unit->cegDamage, 1.0f, 0.0f, unit, nullptr);
+				return true;
+			}
 			if ((sfxType & SFX_CEG) != 0) {
 				// emit defined explosion-generator (can only be custom, not standard)
 				// index is made valid by callee, an ID of -1 means CEG failed to load
